Structure of site completed. Added one image in images

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>landing_page</title>         
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>landing_page</title>
 </head>
+
 <body>
     <div class="header">
         <div class="header-text">Header Logo</div>
@@ -16,24 +18,54 @@
 
         <div class="web-info">
             <div class="left-section">
-                <div id="main-text">
-                    This Website is awesome
-                </div>
+                <div id="main-text">This Website is awesome</div>
                 <div id="sub-text">
-                    This website has subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+                    This website has subtext that goes here under the main title. It's a
+                    smaller font and the color is lower contrast
                 </div>
-                <button class="signup"> signup</button>
+                <button class="signup">signup</button>
             </div>
             <div class="right-section">
-                <img src="" alt="This is a placeholder for the image">
+                <img src="<!--images/computer-repair.svg-->" alt="This is a placeholder for the image" />
             </div>
         </div>
     </div>
 
     <div class="info">
+        <div class="info-text">Some Information</div>
+        <div class="cards">
+            <div class="card">
+                <img class="card-image" src="" alt="Subtext image" />
+                <div>This is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <img class="card-image" src="" alt="Subtext image" />
+                <div>This is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <img class="card-image" src="" alt="Subtext image" />
+                <div>This is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <img class="card-image" src="" alt="Subtext image" />
+                <div>This is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
 
+    <div class="testimony">
+        <div>
+            <p>
+                This is an inspiring quote or testimonial from a customer. Maybe it is just filling up space, or maybe
+                people will actually read it. Who knows? It looks nice though!
+            </p>
+            <p>
+                --Thor, the God of thunder
+            </p>
+        </div>
     </div>
 
     <div class="footer">Copyright © The odin Project 2021</div>
 </body>
+
 </html>
