Setup for styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>landing_page</title>
+    <link rel="styleshee" href="style.css" />
 </head>
 
 <body>
@@ -53,15 +54,14 @@
         </div>
     </div>
 
-    <div class="testimony">
+    <div class="testimony-section">
         <div>
-            <p>
-                This is an inspiring quote or testimonial from a customer. Maybe it is just filling up space, or maybe
-                people will actually read it. Who knows? It looks nice though!
+            <p class="testimony">
+                This is an inspiring quote or testimonial from a customer. Maybe it is
+                just filling up space, or maybe people will actually read it. Who
+                knows? It looks nice though!
             </p>
-            <p>
-                --Thor, the God of thunder
-            </p>
+            <p class="author">--Thor, the God of thunder</p>
         </div>
     </div>
 
