Done with header

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 </div>
                 <button class="header-button">Sign up</button>
             </div>
-            <div class="right-section">
-                <img  class="image" src="images/computer-repair.png" alt="This is a placeholder for the image" />
-            </div>
+
+            <img class="right-section" src="images/computer-repair.png" alt="This is a placeholder for the image" />
+
         </div>
 
 
