--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
     </div>
 
     <div class="info">
-        <div class="info-text">Some Information</div>
+        <div class="info-text">Some Random Information</div>
         <div class="cards">
             <div class="card">
                 <img class="card-image" src="" alt="Subtext image" />
-                <div>This is some subtext under an illustration or image</div>
+                <div class="card-text">This is some subtext under an illustration or image</div>
             </div>
             <div class="card">
                 <img class="card-image" src="" alt="Subtext image" />
-                <div>This is some subtext under an illustration or image</div>
+                <div class="card-text">This is some subtext under an illustration or image</div>
             </div>
             <div class="card">
                 <img class="card-image" src="" alt="Subtext image" />
-                <div>This is some subtext under an illustration or image</div>
+                <div class="card-text">This is some subtext under an illustration or image</div>
             </div>
             <div class="card">
                 <img class="card-image" src="" alt="Subtext image" />
-                <div>This is some subtext under an illustration or image</div>
+                <div class="card-text">This is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
