Done with testimony section

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 
     <div class="testimony-section">
         <div>
-            <p class="testimony">
+            <div class="testimony">
                 This is an inspiring quote or testimonial from a customer. Maybe it is
                 just filling up space, or maybe people will actually read it. Who
                 knows? It looks nice though!
-            </p>
-            <p class="author">--Thor, the God of thunder</p>
+            </div>
+            <div class="author">-Thor, the God of thunder</div>
         </div>
     </div>
 
