Done with action card

--- a/index.html
+++ b/index.html
@@ -72,11 +72,14 @@
     </div>
 
     <div class="action-card">
-        <div class="action-main-text">
-            Call to action! It's time!
-        </div>
-        <div class="action-sub-text">
-            Sign up for our product by clicking that button right over there
+        <div class="action-text">
+            <div class="action-main-text">
+                Call to action! It's time!
+            </div>
+            <div class="action-sub-text">
+                Sign up for our product by clicking that button right over there
+            </div>
+
         </div>
 
         <button class="action-button">Sign up</button>
